--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "start": "PORT=8008 roadhog server",
     "startWin": "set PORT=8008&&roadhog server",
     "build": "roadhog build",
-    "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
+    "lint": "eslint --ext .js src test"
   },
   "engines": {
     "install-node": "6.11.1"
